v001/test-summary/ctest/README.md
<a id="top"></a>
[← back](../README.md) · [↓ bottom](#bottom)

# ctest — by machine

_Generated from `results.db`. Each machine (`jac313-###`) is its own section. Columns are that host's compilers (latest run each); cell = ms (pass) or status._

## jac313-001 — Intel(R) Core(TM) Ultra 7 265 · 4 cores · 11 GB · fedora-44 · x7k

| scenario | [clang22](Run_147.md) | [gcc16](Run_144.md) |
|---|--:|--:|
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v001_parser_validator_test | 50 | 50 |
| jac313_jtext_v001_test | 50 | 50 |
| jac313_qlite_v001_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 451 | 1,304 |
| jac313_store_008_XS | 501 | 551 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 50 | 50 |
| jac313_store_binary_to_jtext_smoke | 50 | 50 |
| jac313_store_flag_routing_smoke | 50 | 50 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 50 | 50 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 50 | 50 |
| jac313_store_v001_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_147](Run_147.md) | clang22 · 2026-07-07T16:55:18Z |
| [Run_144](Run_144.md) | gcc16 · 2026-07-07T16:53:07Z |

## jac313-002 — Intel(R) Core(TM) Ultra 7 265 · 4 cores · 11 GB · rhel-10.2 · x7k

| scenario | [clang21](Run_124.md) | [gcc15](Run_121.md) |
|---|--:|--:|
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v001_parser_validator_test | 50 | 50 |
| jac313_jtext_v001_test | 50 | 50 |
| jac313_qlite_v001_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 250 | 501 |
| jac313_store_008_XS | 251 | 300 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 51 |
| jac313_store_binary_reader_test | 150 | 150 |
| jac313_store_binary_to_jtext_smoke | 150 | 150 |
| jac313_store_flag_routing_smoke | 401 | 150 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 150 | 100 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 404 | 200 |
| jac313_store_v001_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_124](Run_124.md) | clang21 · 2026-07-03T21:32:31Z |
| [Run_121](Run_121.md) | gcc15 · 2026-07-03T21:31:42Z |

## jac313-003 — Intel(R) Core(TM) Ultra 7 265 · 4 cores · 11 GB · linuxmint-22.3 · x7k

| scenario | [clang20](Run_051.md) | [gcc15](Run_071.md) |
|---|--:|--:|
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v001_parser_validator_test | 50 | 50 |
| jac313_jtext_v001_test | 50 | 50 |
| jac313_qlite_v001_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 300 | 150 |
| jac313_store_008_XS | 351 | 252 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 100 |
| jac313_store_binary_reader_test | 351 | 200 |
| jac313_store_binary_to_jtext_smoke | 200 | 200 |
| jac313_store_flag_routing_smoke | 1,002 | 401 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 200 | 150 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 852 | 350 |
| jac313_store_v001_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_071](Run_071.md) | gcc15 · 2026-07-03T08:55:20Z |
| [Run_051](Run_051.md) | clang20 · 2026-07-03T08:20:13Z |
| [Run_048](Run_048.md) | gcc15 · 2026-07-03T08:19:15Z |

## jac313-004 — Intel(R) Core(TM) Ultra 7 265 · 20 cores · 62 GB · rhel-9.8 · ssd

| scenario | [clang21](Run_087.md) | [gcc15](Run_084.md) |
|---|--:|--:|
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v001_parser_validator_test | 50 | 50 |
| jac313_jtext_v001_test | 50 | 50 |
| jac313_qlite_v001_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 50 | 50 |
| jac313_store_008_XS | 50 | 50 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 50 | 50 |
| jac313_store_binary_to_jtext_smoke | 50 | 50 |
| jac313_store_flag_routing_smoke | 50 | 50 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 50 | 50 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 50 | 50 |
| jac313_store_v001_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_087](Run_087.md) | clang21 · 2026-07-03T10:19:21Z |
| [Run_084](Run_084.md) | gcc15 · 2026-07-03T10:19:00Z |

## jac313-005 — Intel(R) Core(TM) Ultra 7 265 · 14 cores · 42 GB · fedora-44 · x7k

| scenario | [clang22](Run_238.md) | [gcc16](Run_235.md) |
|---|--:|--:|
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v001_parser_validator_test | 50 | 50 |
| jac313_jtext_v001_test | 50 | 50 |
| jac313_qlite_v001_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 150 | 452 |
| jac313_store_008_XS | 401 | 401 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 50 | 50 |
| jac313_store_binary_to_jtext_smoke | 50 | 50 |
| jac313_store_flag_routing_smoke | 50 | 50 |
| jac313_store_flags | 50 | 50 |
| jac313_store_html_persist_smoke | 50 | 50 |
| jac313_store_json_persist_smoke | 50 | 50 |
| jac313_store_json_reader_test | 50 | 50 |
| jac313_store_jtext_persist_smoke | 50 | 50 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 50 | 50 |
| jac313_store_v001_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_238](Run_238.md) | clang22 · 2026-07-09T02:04:31Z |
| [Run_235](Run_235.md) | gcc16 · 2026-07-09T02:02:15Z |

## jac313-006 — Intel(R) Core(TM) Ultra 7 265 · 14 cores · 42 GB · linuxmint-22.3 · x7k

| scenario | [clang20](Run_261.md) | [gcc15](Run_258.md) |
|---|--:|--:|
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v001_parser_validator_test | 50 | 50 |
| jac313_jtext_v001_test | 50 | 50 |
| jac313_qlite_v001_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 250 | 402 |
| jac313_store_008_XS | 301 | 402 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 150 | 200 |
| jac313_store_binary_to_jtext_smoke | 200 | 201 |
| jac313_store_flag_routing_smoke | 451 | 351 |
| jac313_store_flags | 50 | 50 |
| jac313_store_html_persist_smoke | 150 | 150 |
| jac313_store_json_persist_smoke | 100 | 251 |
| jac313_store_json_reader_test | 150 | 150 |
| jac313_store_jtext_persist_smoke | 251 | 200 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 451 | 351 |
| jac313_store_v001_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_261](Run_261.md) | clang20 · 2026-07-10T03:33:57Z |
| [Run_258](Run_258.md) | gcc15 · 2026-07-10T03:32:31Z |

---
[← back](../README.md) · [↑ top](#top)
<a id="bottom"></a>
