v002/test-summary/ctest/README.md
<a id="top"></a>
[← back](../README.md) · [↓ bottom](#bottom)

# ctest — by machine

_Generated from `results.db`. Each machine (`jac313-###`) is its own section. Columns are that host's compilers (latest run each); cell = ms (pass) or status._

## jac313-001 — Intel(R) Core(TM) Ultra 7 265 · 4 cores · 11 GB · fedora-44 · x7k

| scenario | [clang22](Run_160.md) | [gcc16](Run_157.md) |
|---|--:|--:|
| jac313_contracts_disabled_test | 50 | 50 |
| jac313_contracts_enforce_test | 701 | 952 |
| jac313_contracts_test | 50 | 50 |
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v002_parser_validator_test | 50 | 50 |
| jac313_jtext_v002_test | 50 | 50 |
| jac313_qlite_v002_test | 50 | 50 |
| jac313_run_identity_test | 50 | 51 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 501 | 1,004 |
| jac313_store_008_XS | 501 | 351 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 50 | 50 |
| jac313_store_binary_to_jtext_smoke | 50 | 50 |
| jac313_store_flag_routing_smoke | 50 | 50 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 50 | 50 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_saturating_capacity_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 50 | 50 |
| jac313_store_v002_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_160](Run_160.md) | clang22 · 2026-07-07T17:22:13Z |
| [Run_157](Run_157.md) | gcc16 · 2026-07-07T17:19:42Z |

## jac313-002 — Intel(R) Core(TM) Ultra 7 265 · 4 cores · 11 GB · rhel-10.2 · x7k

| scenario | [clang21](Run_137.md) | [gcc15](Run_134.md) |
|---|--:|--:|
| jac313_contracts_disabled_test | 50 | 50 |
| jac313_contracts_enforce_test | 200 | 300 |
| jac313_contracts_test | 50 | 50 |
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v002_parser_validator_test | 50 | 50 |
| jac313_jtext_v002_test | 50 | 50 |
| jac313_qlite_v002_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 200 | 251 |
| jac313_store_008_XS | 150 | 150 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 200 | 200 |
| jac313_store_binary_to_jtext_smoke | 151 | 150 |
| jac313_store_flag_routing_smoke | 301 | 301 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 100 | 100 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_saturating_capacity_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 502 | 401 |
| jac313_store_v002_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_137](Run_137.md) | clang21 · 2026-07-03T21:47:31Z |
| [Run_134](Run_134.md) | gcc15 · 2026-07-03T21:46:10Z |

## jac313-003 — Intel(R) Core(TM) Ultra 7 265 · 4 cores · 11 GB · linuxmint-22.3 · x7k

| scenario | [clang20](Run_076.md) | [gcc15](Run_073.md) |
|---|--:|--:|
| jac313_contracts_disabled_test | 50 | 50 |
| jac313_contracts_enforce_test | 501 | 501 |
| jac313_contracts_test | 50 | 50 |
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v002_parser_validator_test | 50 | 50 |
| jac313_jtext_v002_test | 50 | 50 |
| jac313_qlite_v002_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 251 | 200 |
| jac313_store_008_XS | 200 | 351 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 100 | 100 |
| jac313_store_binary_reader_test | 350 | 351 |
| jac313_store_binary_to_jtext_smoke | 250 | 251 |
| jac313_store_flag_routing_smoke | 551 | 601 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 200 | 200 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_saturating_capacity_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 552 | 501 |
| jac313_store_v002_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_076](Run_076.md) | clang20 · 2026-07-03T09:20:33Z |
| [Run_073](Run_073.md) | gcc15 · 2026-07-03T09:19:26Z |

## jac313-004 — Intel(R) Core(TM) Ultra 7 265 · 20 cores · 62 GB · rhel-9.8 · ssd

| scenario | [clang21](Run_100.md) | [gcc15](Run_097.md) |
|---|--:|--:|
| jac313_contracts_disabled_test | 50 | 50 |
| jac313_contracts_enforce_test | 100 | 100 |
| jac313_contracts_test | 50 | 50 |
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v002_parser_validator_test | 50 | 50 |
| jac313_jtext_v002_test | 50 | 50 |
| jac313_qlite_v002_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 50 | 50 |
| jac313_store_008_XS | 50 | 50 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 50 | 50 |
| jac313_store_binary_to_jtext_smoke | 50 | 50 |
| jac313_store_flag_routing_smoke | 50 | 50 |
| jac313_store_flags | 50 | 50 |
| jac313_store_jtext_persist_smoke | 50 | 50 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_saturating_capacity_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 50 | 50 |
| jac313_store_v002_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_100](Run_100.md) | clang21 · 2026-07-03T10:27:13Z |
| [Run_097](Run_097.md) | gcc15 · 2026-07-03T10:26:46Z |

## jac313-005 — Intel(R) Core(TM) Ultra 7 265 · 14 cores · 42 GB · fedora-44 · x7k

| scenario | [clang22](Run_248.md) | [gcc16](Run_245.md) |
|---|--:|--:|
| jac313_contracts_disabled_test | 50 | 50 |
| jac313_contracts_enforce_test | 702 | 752 |
| jac313_contracts_test | 50 | 50 |
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v002_parser_validator_test | 50 | 50 |
| jac313_jtext_v002_test | 50 | 50 |
| jac313_qlite_v002_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 350 | 401 |
| jac313_store_008_XS | 150 | 200 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 50 | 50 |
| jac313_store_binary_reader_test | 50 | 50 |
| jac313_store_binary_to_jtext_smoke | 50 | 50 |
| jac313_store_flag_routing_smoke | 50 | 50 |
| jac313_store_flags | 50 | 50 |
| jac313_store_html_persist_smoke | 50 | 50 |
| jac313_store_json_persist_smoke | 50 | 50 |
| jac313_store_json_reader_test | 50 | 50 |
| jac313_store_jtext_persist_smoke | 50 | 50 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_saturating_capacity_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 50 | 50 |
| jac313_store_v002_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_248](Run_248.md) | clang22 · 2026-07-09T02:53:28Z |
| [Run_245](Run_245.md) | gcc16 · 2026-07-09T02:50:50Z |

## jac313-006 — Intel(R) Core(TM) Ultra 7 265 · 14 cores · 42 GB · linuxmint-22.3 · x7k

| scenario | [clang20](Run_274.md) | [gcc15](Run_271.md) |
|---|--:|--:|
| jac313_contracts_disabled_test | 50 | 50 |
| jac313_contracts_enforce_test | 401 | 501 |
| jac313_contracts_test | 50 | 50 |
| jac313_host_group_test | 50 | 50 |
| jac313_identity_dedup_test | 50 | 50 |
| jac313_instance_hash_test | 50 | 50 |
| jac313_jtext_v002_parser_validator_test | 50 | 50 |
| jac313_jtext_v002_test | 50 | 50 |
| jac313_qlite_v002_test | 50 | 50 |
| jac313_run_identity_test | 50 | 50 |
| jac313_store_001_TS | 50 | 50 |
| jac313_store_001_XS | 50 | 50 |
| jac313_store_002_TS | 50 | 50 |
| jac313_store_002_XS | 50 | 50 |
| jac313_store_003_TS | 50 | 50 |
| jac313_store_003_XS | 50 | 50 |
| jac313_store_004_TS | 50 | 50 |
| jac313_store_004_XS | 50 | 50 |
| jac313_store_005_TS | 50 | 50 |
| jac313_store_005_XS | 50 | 50 |
| jac313_store_006_TS | 50 | 50 |
| jac313_store_006_XS | 50 | 50 |
| jac313_store_007_TS | 50 | 50 |
| jac313_store_007_XS | 50 | 50 |
| jac313_store_008_TS | 301 | 501 |
| jac313_store_008_XS | 251 | 251 |
| jac313_store_bench_smoke | 50 | 50 |
| jac313_store_binary_persist_smoke | 100 | 100 |
| jac313_store_binary_reader_test | 301 | 301 |
| jac313_store_binary_to_jtext_smoke | 200 | 201 |
| jac313_store_flag_routing_smoke | 401 | 501 |
| jac313_store_flags | 50 | 50 |
| jac313_store_html_persist_smoke | 150 | 150 |
| jac313_store_json_persist_smoke | 200 | 150 |
| jac313_store_json_reader_test | 150 | 150 |
| jac313_store_jtext_persist_smoke | 200 | 200 |
| jac313_store_metric_view | 50 | 50 |
| jac313_store_metric_view_test | 50 | 50 |
| jac313_store_saturating_capacity_test | 50 | 50 |
| jac313_store_sql_persist_smoke | 401 | 451 |
| jac313_store_v002_test | 50 | 50 |

**Runs** (newest first):

| run | compiler · recorded |
|---|---|
| [Run_274](Run_274.md) | clang20 · 2026-07-10T04:21:11Z |
| [Run_271](Run_271.md) | gcc15 · 2026-07-10T04:19:10Z |

---
[← back](../README.md) · [↑ top](#top)
<a id="bottom"></a>
